Update 'qvhoff7r3-dotnet-basic' component image to: quay.io/jsmid/rhtap-qe:858fc00e131c5eb7a9bca1887195ced1888a590a@sha256:7f947b254ae5a22d89d66ad50edcb91c25b72556cb541d3b11b1bbb1e7c28a5f

--- a/components/qvhoff7r3-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/qvhoff7r3-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qvhoff7r3-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe:858fc00e131c5eb7a9bca1887195ced1888a590a@sha256:7f947b254ae5a22d89d66ad50edcb91c25b72556cb541d3b11b1bbb1e7c28a5f
+          name: container-image
